external-crates/move/crates/move-compiler/tests/development/enums/parser/enum.exp
error[E13003]: feature is under active development
  ┌─ tests/development/enums/parser/enum.move:2:17
  │
2 │     public enum Temperature {
  │                 ^^^^^^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

error[E13003]: feature is under active development
  ┌─ tests/development/enums/parser/enum.move:8:17
  │
8 │     public enum EnumWithPhantom<phantom T> {
  │                 ^^^^^^^^^^^^^^^ Enums are not supported in bytecode.
  │
  = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/parser/enum.move:12:17
   │
12 │     public enum Action<NextAction> has copy, drop {
   │                 ^^^^^^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

error[E13003]: feature is under active development
   ┌─ tests/development/enums/parser/enum.move:19:17
   │
19 │     public enum Expression {
   │                 ^^^^^^^^^^ Enums are not supported in bytecode.
   │
   = This feature is currently in development.

